// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders profile view -- shows an error 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Your Profile
      </h3>
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Error
          </div>
          <p>
            Network error: Failed to get user profile information
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders profile view correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="image header"
        >
          <div
            class="line"
          />
          <div
            class="line"
          />
        </div>
        <div
          class="paragraph"
        >
          <div
            class="line"
          />
          <div
            class="line"
          />
          <div
            class="line"
          />
          <div
            class="line"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders profile view correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              aria-current="page"
              class="item active"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Your Profile
      </h3>
      <div
        class="ui basic secondary segment"
      >
        <div
          class="ui doubling stackable grid"
        >
          <div
            class="row"
          >
            <div
              class="middle aligned two wide computer sixteen wide mobile four wide tablet column"
            >
              <img
                class="ui small bordered circular centered image"
                src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
              />
            </div>
            <div
              class="ui top left attached label"
            >
              ADMIN, BETA
            </div>
            <div
              class="fourteen wide computer sixteen wide mobile twelve wide tablet column"
            >
              <form
                class="ui mini form"
              >
                <div
                  class="two fields"
                >
                  <div
                    class="disabled field"
                  >
                    <label>
                      Username
                    </label>
                    <input
                      disabled=""
                      value="bendolly"
                    />
                  </div>
                  <div
                    class="disabled field"
                  >
                    <label>
                      Email
                    </label>
                    <input
                      disabled=""
                      value="bendolly@d3b.center"
                    />
                  </div>
                </div>
                <div
                  class="two fields"
                >
                  <div
                    class="disabled field"
                  >
                    <label>
                      First Name
                    </label>
                    <input
                      disabled=""
                      value="Ben"
                    />
                  </div>
                  <div
                    class="disabled field"
                  >
                    <label>
                      Last Name
                    </label>
                    <input
                      disabled=""
                      value="Dolly"
                    />
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <h3
        class="ui header"
      >
        Notifications
      </h3>
      <div
        class="ui icon info attached message"
      >
        <i
          aria-hidden="true"
          class="send icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Get Notified
          </div>
          <p>
            If you are a member of the Kids-First slack channel, we can send you daily updates when there are changes made to the studies of your choosing.
          </p>
        </div>
      </div>
      <div
        class="ui segment"
      >
        <form
          class="ui form"
        >
          <div
            class="fields"
          >
            <div
              class="field"
            >
              <label
                for="slackid"
              >
                Slack ID:
              </label>
              <input
                name="slackid"
                placeholder="U1234ABC"
                type="text"
                value=""
              />
              <a
                href="https://medium.com/@moshfeu/how-to-find-my-member-id-in-slack-workspace-d4bba942e38c"
              >
                Where do I find my id?
              </a>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui checkbox"
            >
              <input
                class="hidden"
                name="notify"
                readonly=""
                tabindex="0"
                type="checkbox"
                value=""
              />
              <label>
                Send me daily activity reports of my subscribed studies
              </label>
            </div>
            <label
              for="notify"
            />
          </div>
          <button
            class="ui primary button"
            type="submit"
          >
            Save
          </button>
          <div
            class="ui hidden info message"
          />
          <div
            class="ui hidden negative message"
          />
        </form>
      </div>
      <h3
        class="ui header"
      >
        Your Subscriptions
      </h3>
      <p>
        We'll notify you of daily activity when you subscribe to studies below
      </p>
      <div>
        Loading subscriptions...
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
